Fixed delete button not on same line on mobile devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -52,14 +52,6 @@ h1 {
     padding: 1em;
 }
 
-.visibile {
-    visibility: visible;
-}
-
-.hidden {
-    visibility: hidden;
-}
-
 .button-delete {
     color: red;
     border: 0;
@@ -104,6 +96,7 @@ h1 {
 }
 
 .links-list {
+    margin: 0 auto;
     padding: 1em;
     width: 100%;
     list-style: none;
@@ -117,14 +110,12 @@ h1 {
     background-color: var(--button-background-color-light);
     padding: 1rem;
     display: inline-block;
-    width: 100%;
 }
 
 .links-list__li--a {
     display: inline-block;
     padding: 0.5em 1em 0.5em 1em;
-    width: 100%;
-    height: 100%;
+    width: 80%;
     text-decoration: none;
     font-size: 1.1em;
     font-weight: bold;
@@ -136,6 +127,9 @@ h1 {
     border-radius: 10px;
     margin: 0.15rem;
     max-width: 30ch;
+    white-space: nowrap;
+    /* overflow: hidden; */
+    text-overflow: ellipsis;
 }
 
 .ip-container {
@@ -170,14 +164,14 @@ h1 {
 
 
 /* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 600px) {
+/* @media only screen and (max-width: 600px) {
     .container {
         width: 95vw;
     }
-}
+} */
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {}
+/* @media only screen and (min-width: 600px) {} */
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
